styles.css
/* Home Page */
.hero {
  background: linear-gradient(rgba(0, 130, 170, 0), rgb(117, 27, 27)),
    url("img/pizza.hero.jpg") center/cover no-repeat;
}
.jumbotron .container {
  /* background: rgba(255, 255, 255, 0.3); */
  color: white;
}
#about h1 {
  text-align: center;
  margin-bottom: 75px;
}
#about img {
  float: left;
  margin: 0 20px 20px 0;
}

/* Menu */
table {
  text-align: center;
  margin: 20px auto 0;
}
th {
  padding: 15px;
}
.tagline {
  color: #222;
  text-align: center;
  width: 60%;
  margin: 0 auto;
}
#pills-tabContent {
  margin-top: 50px;
}
#pills-tabContent h1 {
  font-size: 1.75rem;
  text-align: center;
  color: white;
  padding: 35px 0;
}
#pills-tabContent h2 {
  margin-top: 20px;
}
#pills-pizza h1 {
  background: linear-gradient(rgba(0, 130, 170, 0), rgb(117, 27, 27)),
    url("img/pizza.hero.jpg") center/cover no-repeat;
}
#pills-subs h1 {
  background: linear-gradient(rgba(0, 130, 170, 0), rgb(117, 27, 27)),
    url("img/subs.jpg") center/cover no-repeat;
}
#pills-pasta h1 {
  background: linear-gradient(rgba(0, 130, 170, 0), rgb(117, 27, 27)),
    url("img/pasta.jpg") center/cover no-repeat;
}
#pills-soup-salad h1 {
  background: linear-gradient(rgba(0, 130, 170, 0), rgb(117, 27, 27)),
    url("img/salad.jpg") center/cover no-repeat;
}
#pills-extras h1 {
  background: linear-gradient(rgba(0, 130, 170, 0), rgb(117, 27, 27)),
    url("img/sides.jpg") center/cover no-repeat;
}
#toppings {
  margin-top: 20px;
  text-align: center;
  width: 60%;
  margin: 20px auto 0;
}
#toppings h3 {
  font-size: 1.2rem;
  font-weight: bold;
}
#specialty ul {
  list-style: none;
  text-align: center;
  margin: 0 auto;
  padding: 0;
}
#specialty ul li {
  margin: 15px 0;
}
.item-title {
  padding: 5px 15px;
}
.short-table {
  width: 60%;
}
#sauce-options {
  list-style: none;
  text-align: center;
  width: 60%;
  margin: 0 auto;
  padding: 0;
}
#sauce-options li {
  padding-top: 15px;
}
#desserts em {
  font-size: 0.8rem;
}

/* Location Page */
#locations {
  display: flex;
  flex-direction: row;
  margin: 0 auto;
  justify-content: space-between;
  margin-top: 20px;
}
#locations .card {
  display: inline-block;
  margin: 0;
}

/* About Page */

/* Media Queries  */
@media screen and (max-width: 768px) {
  th,
  td {
    padding: 2px;
    font-size: 0.8rem;
  }
  #locations {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  #locations .card {
    display: block;
  }
  .menu-item h2 {
    text-align: center;
  }
  #sauce-options,
  .short-table,
  #toppings,
  .tagline {
    width: 100%;
  }
  #about img {
    float: none;
    margin: 0 auto 20px;
    display: block;
  }
}

